@@ -10,14 +10,17 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import de.tsl2.nano.modelkit.Identified;
 import de.tsl2.nano.modelkit.Selectable;
+import lombok.Getter;
+import lombok.Setter;
 
 /**
- * Sorting Group, selecting its items through a selector and providing a comparator chain. Each comparator is asked, if it is the
- * right one (canSelect) and can have sub-comparators used on compare-equality. For more informations,
+ * Sorting Group, selecting its items through a selector and providing a
+ * comparator chain. Each comparator is asked, if it is the
+ * right one (canSelect) and can have sub-comparators used on compare-equality.
+ * For more informations,
  * <p/>
  * see {@link #Group(String, int, String, int, String, boolean, String...)}<br>
  * see {@link #sort(List)}<br>
@@ -25,46 +28,71 @@ import de.tsl2.nano.modelkit.Selectable;
  * see {@link #insertion(List, Group, Group)}
  */
 public class Group<T> extends AbstractIdentified implements Comparator<T>, Selectable<T> {
+    @Getter
+    @Setter
     int limit;
+    @Getter
+    @Setter
     int step;
+    @Getter
+    @Setter
     String selectorFact;
+    @Getter
+    @Setter
     List<String> comparatorNames;
+    @Getter
+    @Setter
     private String groupFunction;
+    @Getter
+    @Setter
     private boolean insertionLimitFallDown;
 
-    public Group(String name, int limit, String groupFunction, int step, String selectorFact, String... comparatorNames) {
+    Group() {
+    }
+
+    public Group(String name, int limit, String groupFunction, int step, String selectorFact,
+            String... comparatorNames) {
         this(name, limit, groupFunction, step, selectorFact, false, comparatorNames);
     }
 
     /**
-     * creates a new Group. a group sorts elements through comparators, splits subgroups through given groupFunction and limit,
-     * and inserts group items on higher positions given by step/limit/insertionLimitFallDown.
+     * creates a new Group. a group sorts elements through comparators, splits
+     * subgroups through given groupFunction and limit,
+     * and inserts group items on higher positions given by
+     * step/limit/insertionLimitFallDown.
      *
      * @param name
-     *            unique name
+     *                               unique name
      * @param limit
-     *            primarily used by group splitting to a max of given limit. secondarily used by insertion to indicate limit of
-     *            equal insertions
+     *                               primarily used by group splitting to a max of
+     *                               given limit. secondarily used by insertion to
+     *                               indicate limit of
+     *                               equal insertions
      * @param groupFunction
-     *            defines group splitting and is used on insertion limit
+     *                               defines group splitting and is used on
+     *                               insertion limit
      * @param step
-     *            used by insertion for insertion position - and shifting index on reached limit
+     *                               used by insertion for insertion position - and
+     *                               shifting index on reached limit
      * @param selectorFact
-     *            defines the filter for this group
+     *                               defines the filter for this group
      * @param insertionLimitFallDown
-     *            used by insertion to indicate if an insertion item falls to end of group on reached limit
+     *                               used by insertion to indicate if an insertion
+     *                               item falls to end of group on reached limit
      * @param comparatorNames
-     *            selectable comparators to be used by group sorting
+     *                               selectable comparators to be used by group
+     *                               sorting
      */
-    public Group(String name, int limit, String groupFunction, int step, String selectorFact, boolean insertionLimitFallDown,
-        String... comparatorNames) {
+    public Group(String name, int limit, String groupFunction, int step, String selectorFact,
+            boolean insertionLimitFallDown,
+            String... comparatorNames) {
         super(name);
         this.limit = limit;
         this.groupFunction = groupFunction;
         this.step = step;
         this.insertionLimitFallDown = insertionLimitFallDown;
         this.selectorFact = selectorFact;
-        this.comparatorNames = List.of(comparatorNames);
+        this.comparatorNames = Arrays.asList(comparatorNames);
     }
 
     @Override
@@ -72,6 +100,14 @@ public class Group<T> extends AbstractIdentified implements Comparator<T>, Selec
         checkExistence(groupFunction, Func.class);
         checkExistence(selectorFact, Fact.class);
         checkExistence(NamedComparator.class, comparatorNames);
+    }
+
+    @Override
+    public void tagNames(String parent) {
+        super.tagNames(parent);
+        groupFunction = tag(parent, groupFunction);
+        selectorFact = tag(parent, selectorFact);
+        tag(parent, comparatorNames);
     }
 
     @Override
@@ -108,7 +144,10 @@ public class Group<T> extends AbstractIdentified implements Comparator<T>, Selec
         return items.stream().filter(t -> canSelect(t)).collect(Collectors.toList());
     }
 
-    /** main action for group. does the sorting wich comparators, splitting subgroups and insertions. */
+    /**
+     * main action for group. does the sorting wich comparators, splitting subgroups
+     * and insertions.
+     */
     public List<T> sort(List<T> items) {
         visited();
         List<T> groupItems = filter(items);
@@ -117,11 +156,15 @@ public class Group<T> extends AbstractIdentified implements Comparator<T>, Selec
     }
 
     /**
-     * the group limit will be accessed on the given group by expression. E.g. if the groupByExpression targets a field, a hashmap on all groups pointing to list of items with that groupName will be
-     * splitted after group limit (f.e. limit=3) and the rest will be shift to the bottom of the list.
+     * the group limit will be accessed on the given group by expression. E.g. if
+     * the groupByExpression targets a field, a hashmap on all groups pointing to
+     * list of items with that groupName will be
+     * splitted after group limit (f.e. limit=3) and the rest will be shift to the
+     * bottom of the list.
      */
     List<T> groupByLimit(List<T> groupItems) {
-        return splitGroups(groupBy(groupItems, (Function<T, Object>) get(groupFunction, Func.class).getFunction()), limit);
+        return splitGroups(groupBy(groupItems, (Function<T, Object>) get(groupFunction, Func.class).getFunction()),
+                limit);
     }
 
     private Map<String, List<T>> groupBy(List<T> groupItems, Function<T, Object> groupByExpression) {
@@ -144,15 +187,18 @@ public class Group<T> extends AbstractIdentified implements Comparator<T>, Selec
         boolean iterationNeeded = false;
         for (var entry : grouped.entrySet()) {
             List<T> groupItems = entry.getValue();
+            if (groupItems.isEmpty()) {
+                continue;
+            }
             if (!iterationNeeded && groupItems.size() > groupLimit) {
                 iterationNeeded = true;
             }
-            List<T> fistElements = groupItems.stream().limit(groupLimit).toList();
-            groupItems.removeAll(fistElements);
-            items.addAll(fistElements);
+            List<T> firstElements = groupItems.subList(0, Math.min(groupLimit, groupItems.size()));
+            items.addAll(firstElements);
+            firstElements.clear();
         }
         if (iterationNeeded) {
-            items = Stream.concat(items.stream(), splitGroups(grouped, groupLimit).stream()).toList();
+            items.addAll(splitGroups(grouped, groupLimit));
         }
         return items;
     }
@@ -170,11 +216,15 @@ public class Group<T> extends AbstractIdentified implements Comparator<T>, Selec
      * replacement of group items on specific positions given by member @step.
      *
      * @param allItems
-     *            origin list to position the items of current group upper
+     *                         origin list to position the items of current group
+     *                         upper
      * @param insertedBefore
-     *            if a higher group has call insertion() for its items before, don't overwrite them. normally the previous group.
+     *                         if a higher group has call insertion() for its items
+     *                         before, don't overwrite them. normally the previous
+     *                         group.
      * @param lowerGroupToStop
-     *            do insertions until items of given group are reached. normally the following group.
+     *                         do insertions until items of given group are reached.
+     *                         normally the following group.
      * @return new list with replacements of current group items
      */
     public List<T> insertion(List<T> allItems, Group<T> insertedBefore, Group<T> lowerGroupToStop) {
@@ -230,8 +280,8 @@ public class Group<T> extends AbstractIdentified implements Comparator<T>, Selec
 
     String describe(String prefix) {
         StringBuilder b = new StringBuilder(prefix + super.toString() + " (if:" + selectorFact
-            + ", groupBy: " + groupFunction + "/" + limit + ", insertion: step:" + step
-            + (insertionLimitFallDown ? "/insertionLimitFallDown" : "") + ")\n");
+                + ", groupBy: " + groupFunction + "/" + limit + ", insertion: step:" + step
+                + (insertionLimitFallDown ? "/insertionLimitFallDown" : "") + ")\n");
         comparatorNames.forEach(c -> b.append(get(c, NamedComparator.class).describe(prefix + "\t\t")));
         return b.toString();
     }
